# py-tradfri-cli

./: .env  .gitignore  install-coap-client.sh  pyproject.toml
pyfri-cli/: main.py
pyfri-cli/command/: device.py  device_command.py  info.py
pyfri-cli/tradfri_connection/: gateway_connector.py
src/: main.py  menu.py  tester.py
src/command/: device.py  device_command.py
src/tradfri_connection/: gateway_connector.py
