[tool.poetry]
name = "tradfri-test"
version = "0.1.0"
description = ""
authors = ["SkinnyDevi <xthesmartdartx@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
conda = "^4.3.16"
openwsn-coap = "^0.0.8"
pytradfri = "^11.0.0"
python-decouple = "^3.6"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
