[tool.poetry]
name = "pyfri-cli"
version = "0.5.0"
description = ""
authors = ["SkinnyDevi <xthesmartdartx@gmail.com>"]
readme = "README.md"
packages = [{include = "pyfri-cli"}]

[tool.poetry.dependencies]
python = "^3.9"
pytradfri = "^11.0.0"
python-decouple = "^3.6"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
